# Ros2

./: .clang-format  CMakeLists.txt  CMakeLists.txt.bak  LICENSE  build.sh  clang-format
chap01/: main.py
chap02/demo_cpp_pkg/install/: local_setup.sh  setup.sh
chap02/demo_cpp_pkg/install/demo_cpp_pkg/lib/demo_cpp_pkg/: cpp_node
chap02/demo_cpp_pkg/install/demo_cpp_pkg/share/demo_cpp_pkg/: local_setup.sh  package.sh
chap02/demo_cpp_pkg/log/: latest_build
chap02/demo_cpp_pkg/src/: cpp_node.cpp
chap02/demo_python_pkg/: package.xml
chap02/demo_python_pkg/demo_python_pkg/: python_node.py
chap02/expand_cpp_pkg/: CMakeLists.txt  package.xml
chap02/expand_cpp_pkg/src/: cpp_node.cpp
chap02/expand_python_pkg/: package.xml  setup.cfg  setup.py
chap02/expand_python_pkg/expand_python_pkg/: python_node.py
chap02/ros2_cpp_node/: CMakeLists.txt  ros2_cpp_node.cpp
chap02/ros2_python_node/: ros2_python_node.py
chap02/workspace/demo_cpp_pkg/: CMakeLists.txt  package.xml
chap02/workspace/demo_python_pkg/: setup.py
chap02/workspace/demo_python_pkg/demo_cpp_pkg/: package.xml
chap02/workspace/src/demo_cpp_pkg/: CMakeLists.txt
chap02/workspace/src/demo_python_pkg/: package.xml  setup.py
chap02/writer_cpp_node/: CMakeLists.txt  ros2_cpp_node.cpp
chap02/writer_python_node/: ros2_python_node.py
chap03/topic_practice_workspace/src/status_display/: CMakeLists.txt  package.xml
chap03/topic_practice_workspace/src/status_display/src/: hello_qt.cpp  sys_status_display.cpp
chap03/topic_practice_workspace/src/status_interfaces/: CMakeLists.txt  package.xml
chap03/topic_practice_workspace/src/status_publisher/status_publisher/: sys_status_pub.py
chap03/topic_practice_ws/src/status_interfaces/: CMakeLists.txt  package.xml
chap03/topic_practice_ws/src/status_interfaces/msg/: SystemStatus.msg
chap03/topic_practice_ws/src/status_publisher/: package.xml  setup.py
chap03/topic_practice_ws/src/status_publisher/status_publisher/: sys_status_pub.py
chap03/topic_workspace/src/demo_cpp_topic/: CMakeLists.txt  package.xml
chap03/topic_workspace/src/demo_cpp_topic/src/: turtle_circle.cpp  turtle_control.cpp
chap03/topic_workspace/src/demo_python_topic/: package.xml  setup.py
chap03/topic_workspace/src/demo_python_topic/demo_python_topic/: novel_pub_node.py  novel_sub_node.py
chap03/topic_workspace/src/novels/: novel1.txt
chap03/topic_ws/demo_cpp_topic/: CMakeLists.txt  package.xml
chap03/topic_ws/demo_cpp_topic/src/: turtle_control.cpp
chap03/topic_ws/demo_python_topic/: package.xml  setup.py
chap03/topic_ws/demo_python_topic/demo_python_topic/: novel_pub_node.py  novel_sub_node.py
chap03/topic_ws/novels/: novel1.txt
chap04/face_detect/src/demo_pothon_service/: package.xml  setup.cfg  setup.py
chap04/face_detect/src/demo_pothon_service/demo_pothon_service/: face_detect_client_node.py  face_detect_node.py  learn_face_detect.py
chap04/face_detect/src/interface/: CMakeLists.txt  package.xml
chap04/face_detect/src/interface/srv/: FaceDetector.srv  Patrol.srv
sylar/: config.h  log.cc  log.h  mutex.cc  mutex.h  noncopyable.h  singleton.h  util.cc  util.h
