cmake_minimum_required(VERSION 3.8)
project(status_display)

if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    add_compile_options(-Wall -Wextra -Wpedantic)
endif ()

# find dependencies
list(APPEND CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../install/status_interfaces")
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(status_interfaces REQUIRED)
find_package(Qt5 REQUIRED COMPONENTS Widgets)

aux_source_directory(${CMAKE_SOURCE_DIR}/sylar LOG_SRCS)
add_executable(hello_qt ${LOG_SRCS} ${CMAKE_CURRENT_SOURCE_DIR}/src/hello_qt.cpp)

target_include_directories(hello_qt PUBLIC ${CMAKE_SOURCE_DIR})
target_link_libraries(hello_qt Qt5::Widgets)
ament_target_dependencies(hello_qt rclcpp)
install(TARGETS hello_qt DESTINATION lib/${PROJECT_NAME})

if (BUILD_TESTING)
    find_package(ament_lint_auto REQUIRED)
    # the following line skips the linter which checks for copyrights
    # comment the line when a copyright and license is added to all source files
    set(ament_cmake_copyright_FOUND TRUE)
    # the following line skips cpplint (only works in a git repo)
    # comment the line when this package is in a git repo and when
    # a copyright and license is added to all source files
    set(ament_cmake_cpplint_FOUND TRUE)
    ament_lint_auto_find_test_dependencies()
endif ()

ament_package()
